hphp/hack/test/typecheck/noreturn_typehint_basic_bad1.php
<?hh // strict

function implicit(): noreturn {}
